--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@ body {
     background-color:honeydew;
 }
 
-header {
+header, main {
     display: flex;
-    height: 25vh;
+    width: 100vw;
+    max-width: 800px;
+    min-width: 800px;
 }
 
 .left {
@@ -18,6 +20,20 @@ header {
 .right {
     width: 70%;
     background-color: floralwhite;
+    box-sizing: border-box;
+}
+
+li {
+    font-size: 15px;
+}
+
+.code {
+    width: 85%;
+    background-color: white;
+    font-family: 'Courier New';
+    font-size: 10px;
+    padding: 2px 4px;
+    border-radius: 3px;
 }
 
 footer {
